# slideseq-tools

./: .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  environment.yaml  environment.yml  isort.cfg  options.txt  pyproject.toml  setup.cfg  setup.py
analysis_results/: descriptions.txt
doc/: user_doc.txt
python/: build_reference.sh  filter_unmapped_bam.py  gen_barcode_params.py  generate_plots.py  generate_plots_cmatcher.py  run.sh  run_alignment.py  run_analysis.py  run_analysis_spec.py  run_barcodes2sam.py  run_cmatcher_combine.py  run_mergebarcodes.py  run_preparation.py  run_processbarcodes.py
scripts/: ExtractBeadBarcode.m  WriteBijectiveMapping.m  build_reference.py  build_reference.sh  check_alignments_quality.cpp  cmatcher.cpp  cmatcher_beads.cpp  degenerate_beads.cpp  filter_unmapped_bam.py  filter_unmapped_bam.sh  gen_barcode_params.py  gen_downsample_dge.py  gen_downsample_dge.sh  gen_library_params.py  gen_readme.py  gen_readme.sh  gen_sparse_matrix.py  gen_sparse_matrix.sh  generate_plot_downsampling.py  generate_plot_downsampling.sh  generate_plots.py  generate_plots.sh  generate_plots_cmatcher.py  generate_plots_cmatcher.sh  get_unique_mapped_dge.pl  give_all_group_write.sh  give_group_write.sh  new_submit_to_taskrunner.py  new_taskrunner.py  new_taskrunner.sh  parse_metadata.py  plot_alignment_histogram.py  run.sh  run_ExtractBeadBarcode.sh  run_WriteBijectiveMapping.sh  run_alignment.py  run_alignment.sh  run_analysis.py  run_analysis.sh  run_analysis_UPdistance.py  (+28 more)
test/: example.beadbarcodes.txt  example.buildreference.txt  (+2 more)
(+75 files in other folders)
