[metadata]
name = slideseq-tools
version = attr: slideseq.__version__
description = Tools for processing slideseq data
long_description = file: README.md, LICENSE
url = https://github.com/MacoskoLab/slideseq-tools
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    = src
install_requires =
    Click
    PyYAML
    google-api-python-client
    google-auth
    google-cloud-secret-manager
    matplotlib
    networkx
    numpy
    openpyxl
    pandas
    pysam
    scikit-learn
    scipy

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    submit_slideseq = slideseq.pipeline.submit_slideseq:main
    align_library = slideseq.pipeline.alignment:main
    process_library = slideseq.pipeline.processing:main
    downsample_library = slideseq.pipeline.downsampling:main
    build_ref = slideseq.pipeline.reference:main
    plot_barcodes = slideseq.scripts.plot_barcodes:main
    barcode_matrix = slideseq.scripts.barcode_matrix:main
    check_barcodes = slideseq.scripts.check_barcodes:main

[options.extras_require]
dev =
    black
    isort
    flake8
    pre-commit

[flake8]
max-line-length = 88
exclude = .tox,.git,venv
ignore = E203, E231, E501, W503
